Json Convert code optimisation.

--- a/MzaaloSDKDemo/Base.lproj/Main.storyboard
+++ b/MzaaloSDKDemo/Base.lproj/Main.storyboard
@@ -943,34 +943,58 @@
                                             <action selector="buttonRewardAction:" destination="R37-Rw-5Qq" eventType="touchUpInside" id="EIb-vK-2Lg"/>
                                         </connections>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uBq-in-etg">
-                                        <rect key="frame" x="25" y="189.5" width="364" height="45"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b3N-II-aNR">
+                                        <rect key="frame" x="20" y="261.5" width="374" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EventMeta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="kRe-H1-9RM">
-                                                <rect key="frame" x="0.0" y="0.0" width="91.5" height="45"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="81.5" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter JSONObject of EventMeta" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G48-xf-PAs">
-                                                <rect key="frame" x="101.5" y="0.0" width="262.5" height="45"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter JSONObject of EventMeta" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FzF-NE-lOi">
+                                                <rect key="frame" x="96.5" y="0.0" width="277.5" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vjv-WD-EIL">
+                                                <rect key="frame" x="91.5" y="0.0" width="282.5" height="50"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                         </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="45" id="cGu-js-6FU"/>
+                                            <constraint firstItem="Vjv-WD-EIL" firstAttribute="leading" secondItem="kRe-H1-9RM" secondAttribute="trailing" constant="10" id="55F-AX-9xi"/>
+                                            <constraint firstAttribute="trailing" secondItem="Vjv-WD-EIL" secondAttribute="trailing" id="Cil-4D-lOx"/>
+                                            <constraint firstItem="FzF-NE-lOi" firstAttribute="leading" secondItem="kRe-H1-9RM" secondAttribute="trailing" constant="15" id="GVX-Tm-hzM"/>
+                                            <constraint firstAttribute="bottom" secondItem="kRe-H1-9RM" secondAttribute="bottom" id="HWO-wY-wnJ"/>
+                                            <constraint firstItem="FzF-NE-lOi" firstAttribute="top" secondItem="b3N-II-aNR" secondAttribute="top" id="HzW-Rg-paw"/>
+                                            <constraint firstItem="kRe-H1-9RM" firstAttribute="top" secondItem="b3N-II-aNR" secondAttribute="top" id="L0S-lm-JAM"/>
+                                            <constraint firstAttribute="bottom" secondItem="FzF-NE-lOi" secondAttribute="bottom" id="RDV-bM-xtR"/>
+                                            <constraint firstAttribute="bottom" secondItem="Vjv-WD-EIL" secondAttribute="bottom" id="fXK-VT-HvQ"/>
+                                            <constraint firstItem="Vjv-WD-EIL" firstAttribute="top" secondItem="b3N-II-aNR" secondAttribute="top" id="iiK-jg-UmL"/>
+                                            <constraint firstItem="kRe-H1-9RM" firstAttribute="leading" secondItem="b3N-II-aNR" secondAttribute="leading" id="laf-sX-aI7"/>
+                                            <constraint firstAttribute="trailing" secondItem="FzF-NE-lOi" secondAttribute="trailing" id="pmX-TV-g2w"/>
+                                            <constraint firstAttribute="height" constant="50" id="qKJ-Nf-aMj"/>
                                         </constraints>
-                                    </stackView>
+                                        <variation key="default">
+                                            <mask key="subviews">
+                                                <exclude reference="Vjv-WD-EIL"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="grJ-sa-vgg">
-                                        <rect key="frame" x="0.0" y="286.5" width="414" height="1"/>
+                                        <rect key="frame" x="0.0" y="408.5" width="414" height="1"/>
                                         <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="kXz-D6-QYX"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4PM-Ad-cKS">
-                                        <rect key="frame" x="134.5" y="264.5" width="145" height="45"/>
+                                        <rect key="frame" x="134.5" y="386.5" width="145" height="45"/>
                                         <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="adE-EN-wrN"/>
@@ -988,13 +1012,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fetch Reward Balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZhJ-1x-hS7">
-                                        <rect key="frame" x="96" y="329.5" width="222.5" height="26.5"/>
+                                        <rect key="frame" x="96" y="451.5" width="222.5" height="26.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjx-LW-Dgu">
-                                        <rect key="frame" x="134.5" y="427" width="145" height="45"/>
+                                        <rect key="frame" x="134.5" y="573.5" width="145" height="45"/>
                                         <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="Qxn-hY-A4r"/>
@@ -1012,7 +1036,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTj-2R-oDK">
-                                        <rect key="frame" x="207" y="543" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="207" y="711.5" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1023,32 +1047,33 @@
                                     <constraint firstItem="grJ-sa-vgg" firstAttribute="centerX" secondItem="4PM-Ad-cKS" secondAttribute="centerX" id="3y2-Fp-KiN"/>
                                     <constraint firstItem="kjx-LW-Dgu" firstAttribute="top" secondItem="ZhJ-1x-hS7" secondAttribute="bottom" multiplier="1.2" id="71h-4x-2uu"/>
                                     <constraint firstItem="3ba-My-nxd" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="7X8-aQ-QAx"/>
+                                    <constraint firstItem="grJ-sa-vgg" firstAttribute="centerY" secondItem="4PM-Ad-cKS" secondAttribute="centerY" id="7il-Qe-JbB"/>
+                                    <constraint firstItem="4PM-Ad-cKS" firstAttribute="centerY" secondItem="ChA-lQ-xJa" secondAttribute="centerY" id="AES-kv-UY8"/>
                                     <constraint firstItem="r1i-rP-KCu" firstAttribute="leading" secondItem="gtp-nR-yaN" secondAttribute="leading" id="B1O-hz-OLO"/>
                                     <constraint firstItem="3ba-My-nxd" firstAttribute="width" secondItem="ChA-lQ-xJa" secondAttribute="width" constant="-40" id="EHX-FO-fXh"/>
-                                    <constraint firstItem="uBq-in-etg" firstAttribute="width" secondItem="ChA-lQ-xJa" secondAttribute="width" constant="-50" id="EuA-sr-h65"/>
                                     <constraint firstAttribute="trailing" secondItem="tFu-sG-Sbw" secondAttribute="trailing" id="LA9-yf-iEc"/>
                                     <constraint firstItem="qUf-6w-jFO" firstAttribute="top" secondItem="tFu-sG-Sbw" secondAttribute="bottom" constant="10" id="M6d-HR-pRL"/>
                                     <constraint firstItem="r1i-rP-KCu" firstAttribute="trailing" secondItem="gtp-nR-yaN" secondAttribute="trailing" id="MgR-fF-yqx"/>
-                                    <constraint firstItem="uBq-in-etg" firstAttribute="top" secondItem="3ba-My-nxd" secondAttribute="bottom" constant="30" id="NAS-gD-HMi"/>
                                     <constraint firstItem="4PM-Ad-cKS" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="NqQ-we-d0C"/>
                                     <constraint firstItem="kjx-LW-Dgu" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="QNE-P8-Cns"/>
                                     <constraint firstItem="KTj-2R-oDK" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="S8k-gv-RcM"/>
+                                    <constraint firstItem="b3N-II-aNR" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="TlH-9C-fZY"/>
                                     <constraint firstItem="ZhJ-1x-hS7" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="X5E-am-7tf"/>
                                     <constraint firstItem="4PM-Ad-cKS" firstAttribute="width" secondItem="ChA-lQ-xJa" secondAttribute="width" multiplier="0.35" id="Xlw-GI-GFz"/>
                                     <constraint firstItem="3ba-My-nxd" firstAttribute="top" secondItem="qUf-6w-jFO" secondAttribute="bottom" constant="25" id="Zhf-UZ-NWI"/>
                                     <constraint firstItem="KTj-2R-oDK" firstAttribute="top" secondItem="kjx-LW-Dgu" secondAttribute="bottom" multiplier="1.15" id="bZa-6f-whf"/>
-                                    <constraint firstItem="4PM-Ad-cKS" firstAttribute="top" secondItem="uBq-in-etg" secondAttribute="bottom" constant="30" id="bqC-Wy-5ah"/>
                                     <constraint firstItem="tFu-sG-Sbw" firstAttribute="top" secondItem="ChA-lQ-xJa" secondAttribute="top" id="dpz-nc-Bf8"/>
                                     <constraint firstItem="kjx-LW-Dgu" firstAttribute="width" secondItem="ChA-lQ-xJa" secondAttribute="width" multiplier="0.35" id="ePZ-Oo-Qr3"/>
                                     <constraint firstItem="r1i-rP-KCu" firstAttribute="top" secondItem="gtp-nR-yaN" secondAttribute="top" id="h5K-qy-Mei"/>
-                                    <constraint firstItem="uBq-in-etg" firstAttribute="centerX" secondItem="ChA-lQ-xJa" secondAttribute="centerX" id="hWQ-pj-thz"/>
+                                    <constraint firstItem="4PM-Ad-cKS" firstAttribute="top" relation="greaterThanOrEqual" secondItem="b3N-II-aNR" secondAttribute="bottom" constant="10" id="hCo-Jm-Aoo"/>
                                     <constraint firstItem="grJ-sa-vgg" firstAttribute="width" secondItem="ChA-lQ-xJa" secondAttribute="width" id="iho-cM-Zue"/>
                                     <constraint firstItem="qUf-6w-jFO" firstAttribute="leading" secondItem="tFu-sG-Sbw" secondAttribute="leading" id="jW4-Vc-0nn"/>
-                                    <constraint firstItem="grJ-sa-vgg" firstAttribute="centerY" secondItem="4PM-Ad-cKS" secondAttribute="centerY" id="kw5-SB-NNC"/>
                                     <constraint firstItem="ZhJ-1x-hS7" firstAttribute="top" secondItem="4PM-Ad-cKS" secondAttribute="bottom" constant="20" id="oWc-q4-Fb2"/>
                                     <constraint firstItem="tFu-sG-Sbw" firstAttribute="leading" secondItem="ChA-lQ-xJa" secondAttribute="leading" id="rBA-gc-goU"/>
                                     <constraint firstItem="qUf-6w-jFO" firstAttribute="trailing" secondItem="tFu-sG-Sbw" secondAttribute="trailing" constant="10" id="ub3-Id-SI6"/>
+                                    <constraint firstItem="b3N-II-aNR" firstAttribute="width" secondItem="ChA-lQ-xJa" secondAttribute="width" constant="-40" id="vb2-go-YbQ"/>
                                     <constraint firstItem="r1i-rP-KCu" firstAttribute="bottom" secondItem="gtp-nR-yaN" secondAttribute="bottom" id="xRR-Xe-sTS"/>
+                                    <constraint firstItem="b3N-II-aNR" firstAttribute="centerY" secondItem="ChA-lQ-xJa" secondAttribute="centerY" multiplier="0.7" id="yMV-sF-Vhn"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qzl-Yq-zPv">
@@ -1073,8 +1098,9 @@
                         <outlet property="buttonRegister" destination="4PM-Ad-cKS" id="oaa-zC-YO6"/>
                         <outlet property="buttonRewardsContent" destination="r1i-rP-KCu" id="O2C-Aa-xBT"/>
                         <outlet property="labelBalance" destination="KTj-2R-oDK" id="gJS-iF-YJY"/>
-                        <outlet property="textFeildEvent" destination="G48-xf-PAs" id="4HB-0r-jjP"/>
+                        <outlet property="textFeildEvent" destination="FzF-NE-lOi" id="cZi-rj-1Ce"/>
                         <outlet property="textFeildRewardActions" destination="gtp-nR-yaN" id="IiI-rS-49J"/>
+                        <outlet property="textViewEvent" destination="Vjv-WD-EIL" id="gna-vN-B7T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qDk-Dg-ohb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
